--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
-
 version: "3.9"
 
 services:
   web:
     build: .
     ports:
-      - "8001:8000"
+      - "8001:8004"
     volumes:
-      - ./tiffin_service:/tiffin
+      - .:/app
     command: python manage.py runserver 0.0.0.0:8000
+
 
 
 
