--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Django==4.2.7
-mysqlclient==2.2.0
 Pillow==10.0.1
 django-crispy-forms==2.0
 crispy-bootstrap5==0.7
 python-decouple==3.8
+gunicorn==21.2.0
+redis==5.0.1
+celery==5.3.4
